spade-tests/src/snapshots/spade_tests__suggestions__suggest_add_array_size.snap
---
source: spade-tests/src/suggestions.rs
---
entity main() {
    let _: [bool] = [true, false];
}


error: Expected array size
  ┌─ testinput:2:12
  │
2 │     let _: [bool] = [true, false];
  │            ^^^^^^ This array type
  │
  = Array types need a specified size
  = Insert a size here
  │
2 │     let _: [bool; N] = [true, false];
  │                 +++


